# Eden-Prueba-Tecnica

./: .gitignore  README.md  pyproject.toml  setup.sh
escenario1-baseline/: generate_reports_and_metrics.py
escenario1-baseline/notebooks/: general-notebook.ipynb
escenario1-baseline/notebooks/.ipynb_checkpoints/: general-notebook-checkpoint.ipynb
escenario2-personalizacion-por-medico/: generate_difference_in_reports.py  generate_reports_and_metrics.py
escenario2-personalizacion-por-medico/notebooks/: general-notebook.ipynb
escenario2-personalizacion-por-medico/notebooks/.ipynb_checkpoints/: general-notebook-checkpoint.ipynb
escenario3-multiples-imagenes-por-estudio/: generate_reports_and_metrics.py
escenario3-multiples-imagenes-por-estudio/notebooks/: general-notebook.ipynb
src/system_instructions/: escenario1_baseline.py  escenario2_personalizacion_por_medico.py  escenario3_multiples_imagenes_por_estudio.py
src/utils/: config.py  gemini.py  html_handling.py
